# stratus

./: notes.txt  pyproject.toml
src/chapter0/: exercise0a.py  exercise0b.py  notes0.md
src/chapter1/: exercise1a.py
src/chapter2/: exercise2a.py  exercise2b.py
src/chapter3/: exercise3a.py  exercise3b.py  exercise3c.py
src/chapter4/: exercise4a.py  exercise4b.py  exercise4c.py  notes4.md
src/chapter5/: exercise5a.py  exercise5b.py  notes5.md
src/chapter6/: exercise6a.py
wordle/: .gitignore  README.md  RULES.md  app.py  game.py  words.py
wordle/.devcontainer/: devcontainer.json
wordle/solutions/: game_solution.py
wordle/static/: script.js  style.css
wordle/templates/: index.html
